--- a/package.json
+++ b/package.json
@@ -6,20 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "drizzle-kit generate:pg",
+    "db:push": "drizzle-kit push:pg --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.33.1",
+    "@tabler/icons-react": "^2.32.0",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.28.5",
+    "next": "13.4.19",
+    "postgres": "^3.3.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "drizzle-kit": "^0.19.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "prettier": "^3.0.3",
     "typescript": "5.2.2"
   }
 }
